# ashworth-engine

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  check_status.py  debug_excel.py  debug_extraction.py  debug_full_process.py  do_work.py  docker-compose.dev.yml  docker-compose.yml  langgraph.json  main.py  package-lock.json  pyproject.toml  server.py  setup-supabase.ps1  setup-windows.ps1  simple_workflow_test.py  test_categorizer_demo.py  test_gemma3.py  test_gemma3_pdf.py  test_gemma3_vision_api.py  test_irs_compliance.py  test_rag_endpoints.py  test_report_integration.py  test_report_simple.py  test_sharpe.py  test_sharpe_direct.py  test_simple_extraction.py  test_vector_database.py  test_workflow_management.py  test_workflow_structure.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
apps/coc/: .env.example  .gitignore  .pnp.cjs  README.md  build.ts  deno-dev.ts  deno.json  dev.ts  index.html  main.ts  main.tsx  package.json  preview.ts  tailwind.config.js  vite.config.ts
docs/: Building a Financial Intelligence Platform.md  IMPLEMENTATION-PLAN.md  agent-implementation-rules.md  api_readme.md  architecture-orchestration-analysis.md  development-process-rules.md  frontend_generation_guide.md  irs-compliance-rules.md  langgraph-based-financial-intelligence-platform_ashworth-engine_v2.md  llm-cli-enhancement-summary.md  phase-1-foundation-setup.md  phase-2-completion-summary.md  phase-2-core-development.md  phase-3-advanced-analytics.md  phase-4-irs-compliance.md  phase-4-testing-containerization.md  phase-5-financial-visualization.md  phase-5-launch-enhancements.md  phase-6-testing-validation.md  phase-7-launch-enhancements.md  phase-8-testing-containerization.md  phase-plans-index.md  rag-based-rule-management.md  rag-document-upload-interface.md  rag-memory-implementation-summary.md  session-context-orchestration-fixes.md  technology-stack-rules.md
docs/adr/: ADR-001-langgraph-orchestration.md  ADR-002-uv-dependency-management.md  ADR-003-supabase-backend.md  ADR-004-api-first-no-ui.md  ADR-005-openai-gpt4-reports.md  ADR-006-docker-compose-deployment.md  ADR-007-postgresql-pgvector-analytics.md  ADR-008-dedicated-data-cleaning.md  ADR-009-apache-echarts-charts.md
docs/specs/: agents.yaml  tasks.yaml
examples/: llm_configuration_example.py  llm_usage_example.py
src/: __init__.py
src/agents/: __init__.py  base.py  categorizer.py  chart_generator.py  communication.py  data_cleaner.py  data_fetcher.py  data_processor.py  metrics.py  mock_agent.py  orchestrator.py  pdf_document_intelligence.py  personality.py  report_generator.py  tax_categorizer.py
src/api/: __init__.py  health.py  models.py  routes.py
src/config/: personas.py  prompts.py  settings.py
src/models/: base.py
src/stores/: __init__.py  postgres_checkpoint.py  postgres_store.py
src/tests/: __init__.py  test_rag_memory.py  test_supabase_integration.py
src/utils/: __init__.py  checkpoint_manager.py  checkpointer.py  data_validation.py  decimal_utils.py  document_ingestion.py  file_processing.py  file_processors.py  financial_calculations.py  google_document_ai.py  (+8 more)
supabase/: config.toml  seed.sql
tests/: __init__.py  test_agentic_reasoning.py  test_agentic_reasoning_integration.py  test_base_agent.py  test_categorizer.py  test_categorizer_integration.py  test_categorizer_rag_integration.py  test_checkpoint_memory.py  test_data_processor.py  test_data_processor_integration.py  test_file_processors.py  test_integration_checkpoint_memory.py  test_llm_cli.py  test_llm_providers.py  test_report_generator.py
(+74 files in other folders)
