[project]
name = "ashworth-engine"
version = "2.0.0"
description = "AI-powered financial intelligence platform with Supabase backend"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "markdown>=3.8.2",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pyecharts>=2.0.8",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "seaborn>=0.13.2",
    "snapshot-selenium>=0.0.2",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "supabase>=2.18.1",
    "uvicorn[standard]>=0.35.0",
    "vecs>=0.4.5",
    "weasyprint>=66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0", 
    "pytest-asyncio>=1.1.0",
    "black>=25.0.0",
    "isort>=6.0.0",
    "mypy>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "pytest-asyncio>=1.1.0",
    "black>=25.0.0",
    "isort>=6.0.0",
    "mypy>=1.17.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"
